# llm-pipeline

./: .gitignore  README.md  dataset.py  experiment.py  main.py  main_gpu.py  main_local.py  pyproject.toml  run_chinchilla.sh  run_gpu.sh  run_local.sh  run_scaling_sweep.sh  scaling_law.txt  tokenizer.py  transformer.py  utilities.py
tokenizer/: tokenizer.json  tokenizer_4000.json
