[project]
name = "llm-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0",
    "regex>=2026.4.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
